# voice_note

./: .HANDOFF_NEXT.md  .cursorignore  .env.example  .gitignore  AGENTS.md  CLEANUP_SUMMARY.md  FUTURE-automated-compression-feature.md  MEMORY.md  README.md  RELIABILITY_FIRST.md  RELIABILITY_FIX.md  ROADMAP.md  ROBUST_RECORDING.md  audio_optimization_plan.md  audio_preprocessing_research.md  faster_whisper_benchmark.py  fun.json  pyproject.toml  requirements-local.txt  requirements.txt  transcribe.py  transcription.json  voice_note_deep_research_prompts.md
.opencode/: README.md  agent-environment.json
api_integrations/: faster_whisper_api.py  groq_whisper.py  local_whisper.py  router.py
audio_processing/: preprocess.py  recorder.py
benchmark_results/: benchmark_results.json  transcription_base.txt  transcription_faster-small.txt  transcription_large.txt  transcription_medium.txt  transcription_small.txt  transcription_tiny.txt
cli/: main.py
config/: audio_config.json  config.py  setup.py
docs/: CONTRACT.md  README.md  audio-system.md  development-notes.md  pipewire-integration.md  troubleshooting.md
faster_whisper_daemon/: __init__.py  api.py  cli.py  client.py  daemon.py  server.py  service.py
future_features/: README.md  analyzer_insights.md  system_robustness_roadmap.md
internal/: .HANDOFF_NEXT.md  MEMORY.md  RELIABILITY_FIRST.md  RELIABILITY_FIX.md  ROADMAP.md  development-notes.md
outputs/: transcription3.txt
post_processing/: analyzer.py
prompts/: console.groq.com-docs-speech-text.md  groq_chat_completions.md
schema/: envelope-1.0.json  (+1 more)
(+81 files in other folders)
