[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-note"
version = "1.0.0"
description = "Contract-first voice recording and transcription CLI"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.18.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "langcodes[data]>=3.0",
    "python-dotenv>=1.0.1",
    "pyperclip>=1.8.2",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
mlx = [
    "mlx-whisper>=0.4.0",
]
mlx-all = [
    "mlx-whisper>=0.4.0",
    "mlx-audio>=0.1.0",
]

[project.scripts]
vn = "cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
